src/objects/TaskStreamAssessment__c.object
<CustomObject>
    <description>Data for a Task Stream Assessment that a student is enrolled</description>
    <fields>
        <fullName>ActivityDate__c</fullName>
        <label>Activity Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AssessmentCode__c</fullName>
        <label>Assessment Code</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssessmentIDKey__c</fullName>
        <description>Assessment ID Key from the Task Stream database table.</description>
        <externalId>true</externalId>
        <label>Assessment ID Key</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>AssessmentStatus__c</fullName>
        <formula>CASE(OverallStatus__c,
&quot;IP&quot;, &quot;In Progress&quot;,
&quot;PA&quot;, &quot;Passed&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assessment Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentUserIsMentor__c</fullName>
        <formula>If(Student__r.Mentor__r.PIDM__c = $User.PIDM__c,&apos;True&apos;,&apos;False&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current User Is Mentor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsTestData__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to indicate if the record is a test record</description>
        <label>Is Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NEW_Id__c</fullName>
        <description>A temporary holding field for the new SF ID of this record (person account conversion).</description>
        <label>NEW_Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OLD_Id__c</fullName>
        <description>A temporary holding field for the SF ID of this record, to be used for data migration from a person account org to a non-person account org. Declared as External Id for Upsert operations via the SOAP, REST, or BULK APIs.</description>
        <externalId>true</externalId>
        <label>OLD_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OverallStatus__c</fullName>
        <label>Overall Status</label>
        <length>2</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PIDM__c</fullName>
        <label>PIDM</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <label>Student</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Task_Stream_Assessments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Taskstream Assessment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Student__c</columns>
        <columns>AssessmentStatus__c</columns>
        <columns>ActivityDate__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Task Stream Assessment Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Taskstream Assessments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>